# deck

./: .gitignore  MISSION-CONTROL.md  README.md  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: build-macos.yml
.tldr/: languages.json
.tldr/cache/: call_graph.json
.tldr/cache/semantic/: index.faiss  metadata.json
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/lib/: tmux-session-utils.ts
src/lib/components/: ChatArea.svelte  FilePane.svelte  MissionControlView.svelte  PlaybookTree.svelte  ProjectPanel.svelte  ProjectSidebar.svelte  TerminalPane.svelte  TopNav.svelte
src/lib/components/dashboard/: CronHealthCard.svelte  DashboardCard.svelte  DiscordChannelsCard.svelte  SubAgentsCard.svelte  TelegramTopicsCard.svelte  TmuxSessionsCard.svelte
src/lib/server/: openclaw.ts  projects.ts  tmux.ts
src/lib/stores/: files.svelte.ts  projects.svelte.ts  tauri.ts  tmux.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/api/fs/list/: +server.ts
src/routes/api/fs/read/: +server.ts
src/routes/api/openclaw/cron/: +server.ts
src/routes/api/openclaw/discord-channels/: +server.ts
src/routes/api/openclaw/sessions/: +server.ts
src/routes/api/openclaw/telegram-topics/: +server.ts
src/routes/api/projects/: +server.ts
src/routes/api/skills/content/: +server.ts
src/routes/api/skills/global/: +server.ts
src/routes/dashboard/: +page.svelte
src/routes/mission-control/: +page.svelte
(+5 files in other folders)
