[package]
name = "deck"
version = "0.1.0"
description = "Deck - Agent UI Command Center"
authors = ["brenner"]
edition = "2021"

[lib]
name = "deck_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
